# someip

./: readme.md
examples/: commonapi-someip.ini
examples/tcp/: Attributes.fdepl  Attributes.fidl
examples/tcp/src/: AttributesStubImpl.hpp  vsomeip-local.json
examples/tcp/src-gen/v1/commonapi/examples/: Attributes.hpp  AttributesProxyBase.hpp  AttributesSomeIPCatalog.json  AttributesSomeIPProxy.cpp  AttributesSomeIPStubAdapter.hpp  AttributesStub.hpp
examples/udp/: Attributes.fdepl  CMakeLists.txt
examples/udp/src/: AttributesClient.cpp  AttributesService.cpp  AttributesStubImpl.cpp  vsomeip-local.json
examples/udp/src-gen/v1/commonapi/examples/: AttributesProxy.hpp  AttributesSomeIPDeployment.cpp  AttributesSomeIPDeployment.hpp  AttributesSomeIPProxy.cpp  AttributesSomeIPProxy.hpp  AttributesSomeIPStubAdapter.cpp  AttributesSomeIPStubAdapter.hpp  AttributesStubDefault.hpp
